--- a/src/styles/photos.scss
+++ b/src/styles/photos.scss
@@ -4,7 +4,7 @@ main.photos {
 
     & > section {
         --bg-color: white;
-        --text-color: black;
+        color: black;
 
         width: 750px;
         max-width: 100%;
