rename nav.js to header.js and update references

--- a/src/components/globalscripts.astro
+++ b/src/components/globalscripts.astro
@@ -1,4 +1,4 @@
 <script is:inline src="/script.js"></script>
 <script is:inline src="/intersections.js"></script>
-<script is:inline src="/nav.js"></script>
+<script is:inline src="/header.js"></script>
 <!--<script src="eruda.js"></script>-->
