--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -9,8 +9,5 @@ const { idName } = Astro.props as Props;
 
 ---
 <section class="hero" id={idName}>
-  <div>
-    <h1>Graphics for Good</h1>
-    <h2>Empowering Non-Profits Through the Power of Design!</h1>
-  </div>
+  <slot />
 </section>
