--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,12 @@ import '../styles/photos.scss'
 import '../styles/carousel.scss'
 ---
 <Layout title="Home">
-  <Hero idName="content" />
+  <Hero idName="content">
+    <div>
+      <h1>Graphics for Good</h1>
+      <h2>Empowering Non-Profits Through the Power of Design!</h1>
+    </div>
+  </Hero>
   <main id="mission">
     <div class="container">
       <section id="mSection">
