--- a/src/pages/mission.astro
+++ b/src/pages/mission.astro
@@ -1,8 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro'
+import Hero from '../components/hero.astro'
 ---
 <Layout title="Our Mission">
-  <header class="fullHeight">
+  <Hero idName="content" classItems="fullHeight">
     <section id="content">
       <div class="missiontext">
         <h1 id="whymakethisclub">Why make this club?</h1>
