fix hero.astro/do other things

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -3,7 +3,7 @@ import '../styles/hero.scss'
 
 export interface Props {
 	idName: string;
-  classItems = string;
+  classItems: string;
 }
 
 const { idName, classItems } = Astro.props as Props;
