--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -48,8 +48,8 @@ import '../styles/carousel.scss'
       </div>
     </section>
   </main>
-  <script is:inline src="convertCarousel.js"></script>
-  <script is:inline src="carousel.js"></script>
-  <script is:inline src="work.js"></script>
-  <script is:inline src="modal.js"></script>
+  <script is:inline src="/convertCarousel.js"></script>
+  <script is:inline src="/carousel.js"></script>
+  <script is:inline src="/work.js"></script>
+  <script is:inline src="/modal.js"></script>
 </Layout>
