--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -122,7 +122,7 @@ a#go2content[href="javascript:scrollToNum()"] {
   }
 
   &:not(.disappearing):not(.appearing) {
-    position: absolute;
+    position: sticky;
   }
 
   &.appearing, &.disappearing {
