--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,10 @@ import InfoBox from '../components/infobox.astro'
 import '../styles/globals.scss'
 import '../styles/footer.scss'
 
+var bBorderPages = [
+  '/work'
+]
+
 export interface Props {
 	title: string;
 }
@@ -28,6 +32,13 @@ if (dTitle.startsWith(' | ')) dTitle = dTitle.replace(' | ', '')
     <Header />
     <slot />
     <span style="display: none;" class="hidden" hidden tElement></span>
+    <script>
+      {bBorderPages}.forEach(p => {
+        if (location.pathname === p) {
+          document.querySelector('.header').setAttribute('bBorder', '')
+        }
+      });
+    </script>
     <GlobalScripts />
     <InfoBox />
   </body>
