--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,6 +34,7 @@ if (dTitle.startsWith(' | ')) dTitle = dTitle.replace(' | ', '')
     </script>
     <script is:inline src="/script.js"></script>
     <script is:inline src="/header.js"></script>
+    <script is:inline src="/footer.js"></script>
     <!--<script src="eruda.js"></script>-->
     <InfoBox />
   </body>
