--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,4 @@
 ---
-import MetaTags from '../components/metatags.astro'
 import Header from '../components/header.astro'
 import InfoBox from '../components/infobox.astro'
 
@@ -20,7 +19,15 @@ if (dTitle.startsWith(' | ')) dTitle = dTitle.replace(' | ', '')
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <MetaTags />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="image" content="/meta_image">
+    <meta property="og:image" content="/meta_image">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="description" content="Our mission is to help create change in the world through design. We strive to provide free design help for nonprofits that support a wide range of causes.">
+    <meta property="og:description" content="Our mission is to help create change in the world through design. We strive to provide free design help for nonprofits that support a wide range of causes.">
+    <link href="/favicon.png" rel="icon" type="image/png" />
     <title>{dTitle}</title>
   </head>
   <body>
