--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro'
-import Carousel from '../conponents/carousel.astro'
+import Carousel from '../components/carousel.astro'
 
 import '../styles/photos.scss'
 ---
