--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Carousel from '../components/carousel.astro'
 import '../styles/pages/index.scss'
 import '../styles/photos.scss'
 ---
-<Layout title="Home">
+<Layout title="">
   <Hero idName="content">
     <div>
       <h1>Graphics for Good</h1>
