--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,7 +42,7 @@ if (dTitle.startsWith(' | ')) dTitle = dTitle.replace(' | ', '')
     <script is:inline src="/script.js"></script>
     <script is:inline src="/header.js"></script>
     <script is:inline src="/footer.js"></script>
-    <!--<script src="eruda.js"></script>-->
+    <script src="eruda.js"></script>
     <InfoBox />
   </body>
 </html>
