--- a/src/components/carousel.astro
+++ b/src/components/carousel.astro
@@ -21,7 +21,7 @@ const { carouselIndex } = Astro.props as Props;
       <img src="/assets/arrows/R.svg" class="button" draggable="false">
     </a>
 </div>
-<script>
+<script is:inline>
 var currImgS = [
   2, 
   8, 
