--- a/src/components/carousel.astro
+++ b/src/components/carousel.astro
@@ -9,7 +9,7 @@ const { carouselIndex } = Astro.props as Props;
 
 ---
 <div class="carousel" data-index={carouselIndex}>
-    <a href="javascript:goBack()">
+    <a href="javascript:goBack(event)">
       <img src="/assets/arrows/L.svg" class="button" draggable="false">
     </a>
     <ul class="imgs">
@@ -17,7 +17,7 @@ const { carouselIndex } = Astro.props as Props;
       <slot />
       <img src="/assets/blank.png" draggable="false">
     </ul>
-    <a href="javascript:goForw()">
+    <a href="javascript:goForw(event)">
       <img src="/assets/arrows/R.svg" class="button" draggable="false">
     </a>
 </div>
@@ -44,9 +44,8 @@ function setImg(car=0) {
 }
 setImg()
 
-function goBack() {
-    console.log(this)
-  let car = parseInt(this.parentNode.getAttribute('data-index'))
+function goBack(e) {
+  let car = parseInt(e.target.parentNode.getAttribute('data-index'))
   var bAHref = carousel.querySelectorAll('a')[0]
   var fAHref = carousel.querySelectorAll('a')[carousel.querySelectorAll('a').length - 1]
   var bArrow = carousel.querySelectorAll('img')[0]
@@ -68,9 +67,8 @@ function goBack() {
   }
 }
 
-function goForw() {
-    console.log(this)
-  let car = parseInt(this.parentNode.getAttribute('data-index'))
+function goForw(e) {
+  let car = parseInt(e.target.parentNode.getAttribute('data-index'))
   let carousel = document.querySelectorAll('.carousel')[car]
   var bAHref = carousel.querySelectorAll('a')[0]
   var fAHref = carousel.querySelectorAll('a')[carousel.querySelectorAll('a').length - 1]
