--- a/src/components/carousel.astro
+++ b/src/components/carousel.astro
@@ -45,6 +45,7 @@ function setImg(car=0) {
 setImg()
 
 function goBack(e) {
+    console.log(e)
   let car = parseInt(e.target.parentNode.getAttribute('data-index'))
   var bAHref = carousel.querySelectorAll('a')[0]
   var fAHref = carousel.querySelectorAll('a')[carousel.querySelectorAll('a').length - 1]
@@ -67,6 +68,7 @@ function goBack(e) {
   }
 }
 function goForw(e) {
+    console.log(e)
   let car = parseInt(e.target.parentNode.getAttribute('data-index'))
   let carousel = document.querySelectorAll('.carousel')[car]
   var bAHref = carousel.querySelectorAll('a')[0]
