--- a/src/components/carousel.astro
+++ b/src/components/carousel.astro
@@ -9,7 +9,7 @@ const { carouselIndex } = Astro.props as Props;
 
 ---
 <div class="carousel" data-index={carouselIndex}>
-    <a href="javascript:goBack(event)">
+    <a href="javascript:goBack()">
       <img src="/assets/arrows/L.svg" class="button" draggable="false">
     </a>
     <ul class="imgs">
@@ -17,7 +17,7 @@ const { carouselIndex } = Astro.props as Props;
       <slot />
       <img src="/assets/blank.png" draggable="false">
     </ul>
-    <a href="javascript:goForw(event)">
+    <a href="javascript:goForw()">
       <img src="/assets/arrows/R.svg" class="button" draggable="false">
     </a>
 </div>
@@ -26,6 +26,13 @@ var currImgS = [
   2, 
   8, 
 ]
+
+document.querySelectorAll('.carousel > img:first-child').forEach(ele, function() {
+    ele.addEventLister('click', goBack)
+})
+document.querySelectorAll('.carousel > img:last-child').forEach(ele, function() {
+    ele.addEventLister('click', goForw)
+})
 
 function setImg(car=0) {
   let carousel = document.querySelectorAll('.carousel')[car]
@@ -67,6 +74,7 @@ function goBack(e) {
     fArrow.src = '/assets/arrows/R.svg'
   }
 }
+
 function goForw(e) {
     console.log(e)
   let car = parseInt(e.target.parentNode.getAttribute('data-index'))
