--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ import '../styles/photos.scss'
   <main id="mwork" class="photos">
     <section align="center">
       <h1 style="--text-color: blue; cursor: pointer;" onclick="location.href = '/work?magic=true'" title="Click here to convert to list!">Member Work</h1>
-      <Carousel>
+      <Carousel carouselIndex="0">
         <img class="left" src="/assets/members/isabelle/portfolio/previews/Birds-are-essential-for-our-environment!.png" draggable="false">
         <img class="active" src="/assets/members/shikha/portfolio/previews/Did-you-know.png" draggable="false">
         <img class="right" src="/assets/members/shikha/portfolio/previews/Women's-History-Month!.png" draggable="false">
@@ -72,7 +72,7 @@ import '../styles/photos.scss'
     <div hHr style="width: 800px;"></div>
     <section align="center">
       <h1 id="cphotos">Club Photos</h1>
-      <Carousel>
+      <Carousel carouselIndex="1">
         <img src="/assets/club_photos/previews/IMG_0496.jpg" draggable="false">
         <img src="/assets/club_photos/previews/IMG_0497.jpg" draggable="false">
         <img src="/assets/club_photos/previews/IMG_0498.jpg" draggable="false">
