--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -16,7 +16,7 @@ import '../styles/photos.scss'
         }
       </style>
       <h1 style="--text-color: blue; cursor: pointer;" onclick="magic()" title="Click here to convert to list!">Member Work</h1>
-      <Carousel>
+      <Carousel carouselIndex="0">
         <img class="left" src="/assets/members/isabelle/portfolio/previews/Birds-are-essential-for-our-environment!.png" draggable="false">
         <img class="active" src="/assets/members/shikha/portfolio/previews/Did-you-know.png" draggable="false">
         <img class="right" src="/assets/members/shikha/portfolio/previews/Women's-History-Month!.png" draggable="false">
