--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -1,5 +1,14 @@
 ---
-const members = []
+const members = [
+  'Shikha Iyer', 
+  'Sayuri Rodrigo', 
+  'Adarsh Kumar', 
+  'Isabelle Anderson', 
+  'Hanlin Su', 
+  'Rien Gupta', 
+  'Samantha Wolff', 
+  'Chloe Mercado', 
+]
 
 
 import Layout from '../layouts/Layout.astro'
