--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -286,6 +286,7 @@ main {
     color: black;
     margin: 0;
     text-transform: uppercase;
+    // line-height: 1;
     font-weight: 200;
     font-size: 3rem;
     text-align: center;
