--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -1,10 +1,55 @@
 ---
+const userData = {}
+
 import Layout from '../../layouts/Layout.astro'
 
 import '../../styles/pages/members.scss'
 import '../../styles/photos.scss'
 ---
+
+var section = document.createElement('section')
+main.appendChild(section)
+
+var pfp = document.createElement('span')
+pfp.id = 'pfp'
+pfp.src = '/assets/blank.png'
+section.appendChild(pfp)
+
+var nameEle = document.createElement('h1')
+nameEle.id = 'name'
+section.appendChild(nameEle)
+
+var emailEle = document.createElement('a')
+emailEle.id = 'email'
+section.appendChild(emailEle)
+
+var locationEle = document.createElement('a')
+locationEle.id = 'location'
+
+var locationIcon = document.createElement('div')
+locationEle.appendChild(locationIcon)
+
+var locationSpan = document.createElement('span')
+locationEle.appendChild(locationSpan)
+
+section.appendChild(locationEle)
+
+var socialsEle = document.createElement('ul')
+socialsEle.id = 'socials'
+section.appendChild(socialsEle)
+
+var bio = document.createElement('p')
+bio.id = 'bio'
+section.appendChild(bio)
+
 <Layout title="Members">
+  <section id="content">
+    <main id="profile" class="profile">
+      <section>
+
+      </section>
+    </main>
+  </section>
   <script is:inline src="/members.js"></script>
   <script is:inline src="/modal.js"></script>
 </Layout>
