--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -141,6 +141,9 @@ import '../../styles/photos.scss'
       </section>
     </main>
   </section>
+  <script is:inline>
+    var hasAddedMemberInfo = false
+  </script>
   <script is:inline src="/members.js"></script>
   <script is:inline src="/modal.js"></script>
 </Layout>
